--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
 # Server Configuration
-PORT=3000
+# Option 1: Multiple servers (recommended for multiple upstreams)
+# Format: PORT:UPSTREAM_URL,PORT:UPSTREAM_URL,...
+SERVERS=3000:http://localhost:8080,3001:http://localhost:8081
 
-# Upstream server to proxy requests to
-UPSTREAM_URL=http://localhost:8080
+# Option 2: Single server (backward compatible)
+# If SERVERS is not set, these values will be used
+# PORT=3000
+# UPSTREAM_URL=http://localhost:8080
 
 # Redirect URL when JWT verification fails
 REDIRECT_URL=http://localhost:3001/login
