JWT_TIMEOUT_URL

--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,10 @@ REDIRECT_URL=http://localhost:3001/login
 JWT_KEY_PATH=./keys/jwt-public.pem
 JWT_COOKIE_NAME=auth_token
 
+# Optional: URL to redirect to when JWT token expires (defaults to REDIRECT_URL if not set)
+# Include the parameter name with ? or & as needed. The original request URI will be appended.
+# Examples:
+#   JWT_TIMEOUT_URL=https://main.url/auth/login?return=
+
 # Optional: Skip authentication for specific paths (comma-separated)
 # PUBLIC_PATHS=/health,/public
